k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-restaurant-app
  namespace: symfony-restaurant
  labels:
    app: symfony-restaurant-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: symfony-restaurant-app
  template:
    metadata:
      labels:
        app: symfony-restaurant-app
    spec:
      containers:
        - name: php-fpm
          image: 153806140965.dkr.ecr.eu-west-1.amazonaws.com/symfony-restaurant-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: php
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 20
            failureThreshold: 3

        - name: nginx
          image: nginx:alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: public-assets
              mountPath: /var/www/symfony/public
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 35
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 95
            periodSeconds: 20
            failureThreshold: 3

      volumes:
        - name: nginx-config
          configMap:
            name: symfony-nginx-config
        - name: public-assets
          emptyDir: {}
