k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-restaurant-svc
  namespace: symfony-restaurant
spec:
  selector:
    app: symfony-restaurant-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
